--- a/TensorFlow_with_GPU.ipynb
+++ b/TensorFlow_with_GPU.ipynb
@@ -1,175 +1,192 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Copy of TensorFlow with GPU",
-      "version": "0.3.2",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "[View in Colaboratory](https://colab.research.google.com/github/Steve--Hunter/deep-learning/blob/master/TensorFlow_with_GPU.ipynb)"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/Steve--Hunter/deep-learning/blob/master/TensorFlow_with_GPU.ipynb)"
-      ]
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "BlmQIFSLZDdc"
+   },
+   "source": [
+    "# Confirm TensorFlow can see the GPU\n",
+    "\n",
+    "Simply select \"GPU\" in the Accelerator drop-down in Notebook Settings (either through the Edit menu or the command palette at cmd/ctrl-shift-P)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 34
     },
+    "colab_type": "code",
+    "id": "3IEVK-KFxi5Z",
+    "outputId": "24cb4caa-2517-4570-cade-c4bcb74221de"
+   },
+   "outputs": [
     {
-      "metadata": {
-        "id": "BlmQIFSLZDdc",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# Confirm TensorFlow can see the GPU\n",
-        "\n",
-        "Simply select \"GPU\" in the Accelerator drop-down in Notebook Settings (either through the Edit menu or the command palette at cmd/ctrl-shift-P)."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "3IEVK-KFxi5Z",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "24cb4caa-2517-4570-cade-c4bcb74221de"
-      },
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "device_name = tf.test.gpu_device_name()\n",
-        "if device_name != '/device:GPU:0':\n",
-        "  raise SystemError('GPU device not found')\n",
-        "print('Found GPU at: {}'.format(device_name))"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Found GPU at: /device:GPU:0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "QXRh0DPiZRyG",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# Observe TensorFlow speedup on GPU relative to CPU\n",
-        "\n",
-        "This example constructs a typical convolutional neural network layer over a\n",
-        "random image and manually places the resulting ops on either the CPU or the GPU\n",
-        "to compare execution speed."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "t9ALbbpmY9rm",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 139
-        },
-        "outputId": "c18ab93a-0435-4c29-d76f-0817bec87537"
-      },
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "import timeit\n",
-        "\n",
-        "# See https://www.tensorflow.org/tutorials/using_gpu#allowing_gpu_memory_growth\n",
-        "config = tf.ConfigProto()\n",
-        "config.gpu_options.allow_growth = True\n",
-        "\n",
-        "with tf.device('/cpu:0'):\n",
-        "  random_image_cpu = tf.random_normal((100, 100, 100, 3))\n",
-        "  net_cpu = tf.layers.conv2d(random_image_cpu, 32, 7)\n",
-        "  net_cpu = tf.reduce_sum(net_cpu)\n",
-        "\n",
-        "with tf.device('/gpu:0'):\n",
-        "  random_image_gpu = tf.random_normal((100, 100, 100, 3))\n",
-        "  net_gpu = tf.layers.conv2d(random_image_gpu, 32, 7)\n",
-        "  net_gpu = tf.reduce_sum(net_gpu)\n",
-        "\n",
-        "sess = tf.Session(config=config)\n",
-        "\n",
-        "# Test execution once to detect errors early.\n",
-        "try:\n",
-        "  sess.run(tf.global_variables_initializer())\n",
-        "except tf.errors.InvalidArgumentError:\n",
-        "  print(\n",
-        "      '\\n\\nThis error most likely means that this notebook is not '\n",
-        "      'configured to use a GPU.  Change this in Notebook Settings via the '\n",
-        "      'command palette (cmd/ctrl-shift-P) or the Edit menu.\\n\\n')\n",
-        "  raise\n",
-        "\n",
-        "def cpu():\n",
-        "  sess.run(net_cpu)\n",
-        "  \n",
-        "def gpu():\n",
-        "  sess.run(net_gpu)\n",
-        "  \n",
-        "# Runs the op several times.\n",
-        "print('Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images '\n",
-        "      '(batch x height x width x channel). Sum of ten runs.')\n",
-        "print('CPU (s):')\n",
-        "cpu_time = timeit.timeit('cpu()', number=10, setup=\"from __main__ import cpu\")\n",
-        "print(cpu_time)\n",
-        "print('GPU (s):')\n",
-        "gpu_time = timeit.timeit('gpu()', number=10, setup=\"from __main__ import gpu\")\n",
-        "print(gpu_time)\n",
-        "print('GPU speedup over CPU: {}x'.format(int(cpu_time/gpu_time)))\n",
-        "\n",
-        "sess.close()"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
-            "CPU (s):\n",
-            "9.883571089000043\n",
-            "GPU (s):\n",
-            "0.8411724370000115\n",
-            "GPU speedup over CPU: 11x\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "EY6rTv2TwG6S",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found GPU at: /device:GPU:0\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "device_name = tf.test.gpu_device_name()\n",
+    "if device_name != '/device:GPU:0':\n",
+    "  raise SystemError('GPU device not found')\n",
+    "print('Found GPU at: {}'.format(device_name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "QXRh0DPiZRyG"
+   },
+   "source": [
+    "# Observe TensorFlow speedup on GPU relative to CPU\n",
+    "\n",
+    "This example constructs a typical convolutional neural network layer over a\n",
+    "random image and manually places the resulting ops on either the CPU or the GPU\n",
+    "to compare execution speed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 139
+    },
+    "colab_type": "code",
+    "id": "t9ALbbpmY9rm",
+    "outputId": "c18ab93a-0435-4c29-d76f-0817bec87537"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
+      "CPU (s):\n",
+      "3.753480445999969\n",
+      "GPU (s):\n",
+      "0.04237803200004464\n",
+      "GPU speedup over CPU: 88x\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import timeit\n",
+    "\n",
+    "# See https://www.tensorflow.org/tutorials/using_gpu#allowing_gpu_memory_growth\n",
+    "config = tf.ConfigProto()\n",
+    "config.gpu_options.allow_growth = True\n",
+    "\n",
+    "with tf.device('/cpu:0'):\n",
+    "  random_image_cpu = tf.random_normal((100, 100, 100, 3))\n",
+    "  net_cpu = tf.layers.conv2d(random_image_cpu, 32, 7)\n",
+    "  net_cpu = tf.reduce_sum(net_cpu)\n",
+    "\n",
+    "with tf.device('/gpu:0'):\n",
+    "  random_image_gpu = tf.random_normal((100, 100, 100, 3))\n",
+    "  net_gpu = tf.layers.conv2d(random_image_gpu, 32, 7)\n",
+    "  net_gpu = tf.reduce_sum(net_gpu)\n",
+    "\n",
+    "sess = tf.Session(config=config)\n",
+    "\n",
+    "# Test execution once to detect errors early.\n",
+    "try:\n",
+    "  sess.run(tf.global_variables_initializer())\n",
+    "except tf.errors.InvalidArgumentError:\n",
+    "  print(\n",
+    "      '\\n\\nThis error most likely means that this notebook is not '\n",
+    "      'configured to use a GPU.  Change this in Notebook Settings via the '\n",
+    "      'command palette (cmd/ctrl-shift-P) or the Edit menu.\\n\\n')\n",
+    "  raise\n",
+    "\n",
+    "def cpu():\n",
+    "  sess.run(net_cpu)\n",
+    "  \n",
+    "def gpu():\n",
+    "  sess.run(net_gpu)\n",
+    "  \n",
+    "# Runs the op several times.\n",
+    "print('Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images '\n",
+    "      '(batch x height x width x channel). Sum of ten runs.')\n",
+    "print('CPU (s):')\n",
+    "cpu_time = timeit.timeit('cpu()', number=10, setup=\"from __main__ import cpu\")\n",
+    "print(cpu_time)\n",
+    "print('GPU (s):')\n",
+    "gpu_time = timeit.timeit('gpu()', number=10, setup=\"from __main__ import gpu\")\n",
+    "print(gpu_time)\n",
+    "print('GPU speedup over CPU: {}x'.format(int(cpu_time/gpu_time)))\n",
+    "\n",
+    "sess.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "EY6rTv2TwG6S"
+   },
+   "source": [
+    "P100, 10 vCPU, 60G RAM (AISE Tensorflow)\n",
+    "CPU (s):\n",
+    "3.753480445999969\n",
+    "GPU (s):\n",
+    "0.04237803200004464\n",
+    "GPU speedup over CPU: 88x\n",
+    "\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "collapsed_sections": [],
+   "include_colab_link": true,
+   "name": "Copy of TensorFlow with GPU",
+   "provenance": [],
+   "toc_visible": true,
+   "version": "0.3.2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
