--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -12,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -39,11 +37,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.251908396946565\n",
+      "Number of lines: 4258\n",
+      "Average number of words in each line: 11.50164396430249\n",
+      "\n",
+      "The sentences 0 to 10:\n",
+      "\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -88,14 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
+    "from collections import namedtuple\n",
     "\n",
     "def create_lookup_tables(text):\n",
     "    \"\"\"\n",
@@ -104,13 +132,19 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    vocab = sorted(set(text))\n",
+    "    vocab_to_int = {c: i for i, c in enumerate(vocab)}\n",
+    "    int_to_vocab = dict(enumerate(vocab))\n",
+    "    encoded = np.array([vocab_to_int[c] for c in text], dtype=np.int32)\n",
+    "    \n",
+    "    return vocab_to_int, int_to_vocab\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
-    "tests.test_create_lookup_tables(create_lookup_tables)"
+    "tests.test_create_lookup_tables(create_lookup_tables)\n"
    ]
   },
   {
@@ -137,19 +171,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "from string import punctuation\n",
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    value = ['||Period||','||Comma||','||Quotation_mark||','||Semicolon||','||Exclamation_mark||','||Question_mark||','||Left_parentheses||','||Right_parentheses||','||Dash||','||Return||']\n",
+    "    key = ['.',',','\"',';','!','?','(',')','--','\\n']\n",
+    "    dictionary = dict(zip(key,value))\n",
+    "    return dictionary\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -167,10 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -190,10 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -224,11 +265,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.8.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\smtah\\Miniconda3\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -842,7 +896,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -856,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   },
   "widgets": {
    "state": {},
